[tool.poetry]
name = "llm-analysis-quiz-agent"
version = "0.1.0"
description = "A tool-based agent for solving LLM analysis quizzes."
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
requests = "^2.31.0"
playwright = "^1.39.0"
pandas = "^2.1.3"
PyPDF2 = "^3.0.1"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.1"
langchain = "^0.0.340"
langgraph = "^0.0.8"
langchain-google-genai = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
